<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imProduct"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="5dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginTop="20dp"
                        android:id="@+id/tvOldPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/red"
                        android:textSize="20dp"
                        android:textStyle="italic" />

                    <LinearLayout
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tinhTrang"
                            android:textSize="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/conHang"
                            android:textColor="@color/teal_200"
                            android:textSize="20dp" />
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baoHanh"
                    android:textColor="@color/teal_200"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thongTinBaoHanh1"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thongTinBaoHanh2"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thongTinBaoHanh3"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thongTinBaoHanh4"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thongTinBaoHanh5"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thongTinBaoHanh6"
                    android:textSize="18dp" />
            </LinearLayout>

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAddProduct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="Thêm vào giỏ hàng" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/inforDetail"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/CPU"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvCPU"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/OS"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvOS"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/RAM"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvRAM"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/GPU"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvGPU"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Monitor"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvMonitor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/SSD"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvSSD"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Lan"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvLan"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/WirelessLan"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvWireLess"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Connectors"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvConnector"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Keyboard"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvKeyBoard"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textColor="@color/black"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Weight"
                                android:textSize="18dp" />

                            <TextView
                                android:layout_marginLeft="150dp"
                                android:id="@+id/tvWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="18dp" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>