<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/lvImage"
                android:scaleType="fitCenter"
                android:src="@drawable/slide_show"
                android:layout_width="match_parent"
                android:layout_height="250dp">
            </ImageView>
            <LinearLayout
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_rounded"
                        android:layout_width="70dp"
                        android:layout_height="70dp">
                        <ImageView
                            android:id="@+id/imLaptop"
                            android:layout_centerInParent="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/laptopgm"/>

                    </RelativeLayout>
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black_light"
                        android:text="@string/Laptop"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_rounded"
                        android:layout_width="70dp"
                        android:layout_height="70dp">
                        <ImageView
                            android:id="@+id/imPC"
                            android:layout_centerInParent="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/pcgaming"/>
                    </RelativeLayout>
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black_light"
                        android:text="@string/PCGaming"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">
                    <RelativeLayout
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/custom_rounded"
                        android:layout_width="70dp"
                        android:layout_height="70dp">
                        <ImageView
                            android:id="@+id/imPCof"
                            android:layout_centerInParent="true"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/pcof"/>
                    </RelativeLayout>
                    <TextView
                        android:textSize="16dp"
                        android:textColor="@color/black_light"
                        android:text="@string/PCOffice"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/PCList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcViewPC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/LaptopList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcViewLapTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>
</layout>